[package]
name = "rustevo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.0", features = [ "derive" ] }
env_logger = "0.10.0"
log = "0.4.17"
pollster = "0.3.0"
wgpu = "0.15.1"
winit = "0.28.1"
anyhow="1.0"
cgmath = "0.18.0"
libm = "0.2.6"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
